# interior_ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  playground.ipynb  pyproject.toml  settings.py
dataset/1_modern_minimalist/: prompt_v1.md  prompt_v2.md  prompt_v3.md  prompt_v4.md  prompt_v5.md
dataset/2_industrial_loft/: prompt_v1.md  prompt_v2.md  prompt_v3.md  prompt_v4.md  prompt_v5.md
dataset/3_japandi_zen/: prompt_v1.md  prompt_v2.md  prompt_v3.md  prompt_v4.md  prompt_v5.md
dataset/4_tech_savvy/: prompt_v1.md  prompt_v2.md  prompt_v3.md  prompt_v4.md  prompt_v5.md
dataset/5_warm_mediterranean/: prompt_v1.md  prompt_v2.md  prompt_v3.md  prompt_v4.md  prompt_v5.md
prompts/: dataset_gen.jinja  img_gen.jinja  plan.jinja  prompt_enhancer.jinja
src/: graph.py  main.py  models.py  service.py  settings.py  utils.py
